--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-  <div><img src="/افاق.png" alt=""></div>
+  <div><img src="افاق.png" alt=""></div>
 <!-- partial:index.partial.html -->
 <div class="container">
   <div class="row">
